# med_ai

./: .dockerignore  Dockerfile  README.md  chatbot.py  create_vector_db.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml.backup
archive/: pyproject.toml
vector_db/db_faiss/: index.faiss  index.pkl
