[project]
name = "med-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.35.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.49.1",
    "torch==2.8.0",
]
